GearsetPOC/force-app/main/default/objects/Comp_App_Zero_Price_Compensation__c/Comp_App_Zero_Price_Compensation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Comp App Zero Price Compensation</label>
</CustomObject>