GearsetPOC/force-app/main/default/objects/Comp_App_Zero_Price_Compensation__c/fields/Delay_Start__c.field-meta.xml
<CustomField>
    <fullName>Delay_Start__c</fullName>
    <label>Delay Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>