GearsetPOC/force-app/main/default/objects/Comp_App_Zero_Price_Compensation__c/fields/FBC__c.field-meta.xml
<CustomField>
    <fullName>FBC__c</fullName>
    <label>FBC</label>
    <length>27</length>
    <type>Text</type>
</CustomField>