GearsetPOC/force-app/main/default/objects/Comp_App_Zero_Price_Compensation__c/fields/isValidRule__c.field-meta.xml
<CustomField>
    <fullName>isValidRule__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isValidRule</label>
    <type>Checkbox</type>
</CustomField>