GearsetPOC/force-app/main/default/objects/Comp_App_Zero_Price_Compensation__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>