GearsetPOC/force-app/main/default/objects/Comp_App_Zero_Price_Compensation__c/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <label>Voucher</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>